feedback coordinator remarks

--- a/capa-close.html
+++ b/capa-close.html
@@ -196,7 +196,7 @@
             <div class ='row'> 
                 <div class="col-12"> 
                     <dl class="  ">
-                        <dt class="col-sm-12 bmh-blue-txt">Review Comments</dt>
+                        <dt class="col-sm-12 bmh-blue-txt">Feedback Coordinator Remarks</dt>
                         <dd class="col-sm-12" id = 'reviewComments'>-</dd>
                     </dl>
                 </div>
