Real time feedback

--- a/rt-feedback.html
+++ b/rt-feedback.html
@@ -165,7 +165,11 @@
                 </div>
         </div>
         <div class = 'container'>
-            <p class='text-justify bmh-blue-txt font-weight-bold'>Please let us know how we can provide you a delightful experience:</p>
+            <h5 class='text-justify bmh-blue-txt font-weight-bold pb-3'>
+                BMH is committed to providing the best possible care for all our patients. 
+                If you have any suggestions / feedback to help us provide you a delightful experience, 
+                please let us know using the form below.
+            </h5>
             <form name="myForm">
                 <input type="hidden" id="form_name" name="form_name" value="feedback">
                 <div class="row">
@@ -239,7 +243,7 @@
 
 		</div>
     <script type="text/javascript">
-        const url = "https://script.google.com/macros/s/AKfycby1OCswqdFj4LQiU_zAUnxGXfppmdZnXvvHslxPvVWShk0inXI_/exec";        
+        const url = "https://script.google.com/macros/s/AKfycby1OCswqdFj4LQiU_zAUnxGXfppmdZnXvvHslxPvVWShk0inXI_/exec";          
         const form = document.forms.namedItem("myForm");
         console.log(form);
         form.addEventListener("submit", function (e) {
