error corrected in sms

--- a/rt-dialler.html
+++ b/rt-dialler.html
@@ -129,8 +129,8 @@
         "%0a"+"I would like to follow-up on an online feedback you submitted at Baby Memorial Hospital. "+
         "I tried reaching you over the phone, but was unable to do so. Kindly let me know a suitable time to contact you to discuss further."+
         "%0a"+
-        "%0a" + "(name)"
-        ",%0a"+ "Patient Care Coordinator"
+        "%0a" + "(name)"+
+        ",%0a"+ "Patient Care Coordinator"+
         ",%0a"+"Baby Memorial Hospital.";
         document.getElementById('patient').innerHTML = '<i class="fas fa-user"></i> ' + patient;
         document.getElementById('comments').innerHTML = '<i class="far fa-comment-alt"></i> ' + feedback;
