--- a/rt-feedback.html
+++ b/rt-feedback.html
@@ -166,7 +166,7 @@
         </div>
         <div class = 'container'>
             <h5 class='text-justify bmh-blue-txt font-weight-bold pb-3'>
-                BMH is committed to providing the best possible care for all our patients. 
+                BMH is committed to providing the best possible care for you and your family. 
                 If you have any suggestions / feedback to help us provide you a delightful experience, 
                 please let us know using the form below.
             </h5>
