--- a/rt-close.html
+++ b/rt-close.html
@@ -168,13 +168,13 @@
         </div>
         <div class = 'container'>
             <div class ='row'> 
-                <div class="col-6"> 
+                <div class="col-12 col-md-6"> 
                     <dl class="  ">
                         <dt class="col-sm-12 bmh-blue-txt">Feedback ID</dt>
                         <dd class="col-sm-12" id = 'feedback-id'>-</dd>
                     </dl>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <dl class="  "> 
                         <dt class="col-sm-12 bmh-blue-txt">Name</dt>
                         <dd class="col-sm-12" id = 'name'>-</dd>
