added shift supervisor number for emergency

--- a/rt-feedback.html
+++ b/rt-feedback.html
@@ -217,7 +217,8 @@
                 if (data.status === 200) {
                     heading = "Feedback submitted successfully!";
                     message = "Your feedback is extremely important to us. Our Patient Care Coordinator\
-                    will be contacting you soon.";
+                    will be contacting you soon. In case of emergency, please contact the \
+                    Shift Supervisor at +91 97472 00002.";
                     form.reset();
                 }
                 else {
