--- a/rt-feedback.html
+++ b/rt-feedback.html
@@ -1,7 +1,7 @@
 <html>
  
 <head>
-    <title>IP Feedback Form</title>
+    <title>BMH Feedback Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#364cc9">
     <script src="jquery-3.4.1.min.js"></script>
