Disable button on form submission

--- a/feedback.html
+++ b/feedback.html
@@ -188,7 +188,7 @@
         </div>
         <div class = 'container'>
             
-            <form name="myForm">
+            <form name="myForm" id='myForm'>
                 <input type="hidden" id="form_name" name="form_name" value="feedback">
                 <div class="row">
                     <div class="form-group d-none">
@@ -818,7 +818,11 @@
         });
 
 
-
+        //Disable button on submit
+        $('#myForm').submit(function(){
+            $(this).find(':button[type=submit]').prop('disabled', true);
+            $(this).find(':button[type=submit]').html('Submitting...');
+        });
 
 
         </script>
