--- a/rt-dialler.html
+++ b/rt-dialler.html
@@ -127,7 +127,7 @@
         document.getElementById('sms').href = "sms:"+phone+"?body=Dear "+ patient + 
         ",%0a"+
         "%0a"+"I would like to follow-up on an online feedback you submitted at Baby Memorial Hospital. "+
-        "I tried reaching you over the phone, but was unable to do so. Kindly let me know a suitable time to contact you to discuss further."+
+        "(Insert details)"+
         "%0a"+
         "%0a" + "(name)"+
         ",%0a"+ "Shift Supervisor"+
