--- a/rt-feedback.html
+++ b/rt-feedback.html
@@ -164,7 +164,7 @@
                     </div>                   
                     <div class="form-group col-12 collapse" id="uhid">
                         <label for="uhid" class = 'bmh-blue-txt font-weight-bold' id='uhid-label'>Hospital Number (UHID)</label>
-                        <input type="text" class="form-control" id="uhid2" name="uhid" maxlength="20">                      
+                        <input type="number" class="form-control" id="uhid2" name="uhid" maxlength="20">                      
                     </div>
                     <div class="form-group col-12 collapse" id="room">
                         <label for="room" class = 'bmh-blue-txt font-weight-bold' id='room-label'>Room No.</label>
