added patient rights category

--- a/close.html
+++ b/close.html
@@ -341,6 +341,7 @@
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
                                     <option class = 'Others'>Birth & Death registration</option>  
+                                    <option class = 'Others'>Patient Rights</option>
                                 </select>
                             </div>
                         </div>
