--- a/manual-feedback.html
+++ b/manual-feedback.html
@@ -359,7 +359,8 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
-                            <option class = 'Others'>Birth & Death registration</option>                            
+                            <option class = 'Others'>Birth & Death registration</option>  
+                            <option class = 'Others'>Patient Rights</option>                          
                             </select>
                         </div>
                         <div class="form-group">
@@ -469,7 +470,8 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>                                    
+                                    <option class = 'Others'>Birth & Death registration</option>  
+                                    <option class = 'Others'>Patient Rights</option>                                  
                             </select>
                         </div>
                         <div class="form-group">
@@ -579,7 +581,8 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>                                    
+                                    <option class = 'Others'>Birth & Death registration</option>      
+                                    <option class = 'Others'>Patient Rights</option>                              
                             </select>
                         </div>
                         <div class="form-group">
