--- a/feedback.html
+++ b/feedback.html
@@ -339,7 +339,8 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
-                            <option class = 'Others'>Birth & Death registration</option>                            
+                            <option class = 'Others'>Birth & Death registration</option>
+                            <option class = 'Others'>Patient Rights</option>                            
                             </select>
                         </div>
                         <div class="form-group">
@@ -449,7 +450,8 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>                                    
+                                    <option class = 'Others'>Birth & Death registration</option>
+                                    <option class = 'Others'>Patient Rights</option>                                    
                             </select>
                         </div>
                         <div class="form-group">
@@ -559,7 +561,8 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>                                    
+                                    <option class = 'Others'>Birth & Death registration</option>   
+                                    <option class = 'Others'>Patient Rights</option>                                 
                             </select>
                         </div>
                         <div class="form-group">
