--- a/rt-close.html
+++ b/rt-close.html
@@ -282,7 +282,8 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>                                    
+                                    <option class = 'Others'>Birth & Death registration</option>        
+                                    <option class = 'Others'>Patient Rights</option>                            
                                 </select>
                             </div>
                         </div>  
