--- a/feedback.html
+++ b/feedback.html
@@ -246,6 +246,11 @@
                     <div class = "collapse" id = 'feedback1'>
                         <h4 class = 'bmh-orange-bg rounded-heading-v2'>Feedback 1</h4>
                         <div class="form-group">
+                            <a class="btn btn-primary btn-block btn-sm" href="https://feedback.bmhcare.in/patient_rights_english/" target="_blank">
+                                Read about Patient Rights
+                            </a>
+                        </div>
+                        <div class="form-group">
                             <label for="type1" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type1" name="type1">
                             <option class = 'Select-type'>Select Feedback Type</option>
@@ -342,7 +347,7 @@
                             <option class = 'Others'>Birth & Death registration</option>
                             <option class = 'Others'>Patient Rights</option>                            
                             </select>
-                        </div>
+                        </div>                        
                         <div class="form-group">
                             <label for="comments1" class = 'bmh-orange-txt font-weight-bold'>Comments</label>
                             <textarea rows = "5" type="text" class="form-control" id="comments1" name="description1"></textarea>                      
@@ -617,23 +622,23 @@
     <script type="text/javascript">
         const url = "https://script.google.com/macros/s/AKfycbxfV2dMZjUx3975R6PMsTFUq9smjKTrsYt0RSAgZ32A_8v7sbk/exec";        
         const form = document.forms.namedItem("myForm");
-        console.log(form);
+        // console.log(form);
         form.addEventListener("submit", function (e) {
             e.preventDefault();
             createMessage();
         })
  
         function createMessage() {
-            console.log("submitted");
+            // console.log("submitted");
             const formData = new FormData(form);
-            console.log(formData);
+            // console.log(formData);
             fetch(url, {
                 method: "POST"
                 , body: formData
             }).then(function (response) {
                 return response.json()
             }).then(function (data) {
-                console.log(data);
+                // console.log(data);
                 let heading = "";
                 let message = "";
                 if (data.status === 200) {
@@ -669,28 +674,28 @@
         //Get patient details from URL parameters (using /)
             var params = location.href.replace(/%20&%20/g, " AND ").replace(/-/g, " ").replace(/%7C/g, "|").split("?")[1]; //To correct issue with '&' in OBG
             var submitter = params.split('|')[0].replace(/%20/g, " ");
-            console.log(submitter);
+            // console.log(submitter);
             var name = params.split('|')[1].replace(/%20/g, " ");
-            console.log(name);
+            // console.log(name);
             var uhid = params.split('|')[2];
-            console.log(uhid);
+            // console.log(uhid);
             var ward = params.split('|')[3];
-            console.log(ward);
+            // console.log(ward);
             var room = params.split('|')[4].replace(/%20/g, " ");
-            console.log(room);
+            // console.log(room);
             var doctor = params.split('|')[5].replace(/%20/g, " ");
-            console.log(doctor);
+            // console.log(doctor);
             var department = params.split('|')[6].replace(/%20/g, " ");
-            console.log(department);
+            // console.log(department);
             var mobile = params.split('|')[7];
-            console.log(mobile);
+            // console.log(mobile);
             var admNo = params.split('|')[8];
-            console.log(admNo);
+            // console.log(admNo);
             // var link = params.split('/')[9];            
             var link = window.location.href.replace(/%20/g, "-");
             var link2 = btoa(link);
-            console.log(link);
-            console.log(link2);
+            // console.log(link);
+            // console.log(link2);
 
         //Pre-fill form based on patient data
             document.getElementById('submitter').value = submitter;
@@ -727,7 +732,7 @@
             // 'https://wa.me/whatsappphonenumber/?text=urlencodedtext'
             // 'https://wa.me/?text=urlencodedtext'
 
-            console.log(admNo);
+            // console.log(admNo);
 
         //Update sub-category based on category selected
         //Based on http://jsfiddle.net/Wa4ZF/9/ and https://stackoverflow.com/questions/20477406/filter-category-select-drop-down-based-on-another-drop-down-option
