Disabled Insta replies

--- a/close.html
+++ b/close.html
@@ -371,7 +371,7 @@
                             <label for="comments" class = 'bmh-blue-txt font-weight-bold'>Closure Comments</label>
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description1"></textarea>                      
                         </div>   
-                        <h6 class = 'bmh-blue-txt'><em>Insta Replies (Beta)*</em></h6>
+                        <!-- <h6 class = 'bmh-blue-txt'><em>Insta Replies (Beta)*</em></h6>
                         <div class = 'row'>
                             <div class = 'col-12 col-md-4'>
                                 <button id='smart-reply1' class = 'btn btn-outline-primary btn-block mb-2'>Action taken.</button>
@@ -382,7 +382,7 @@
                             <div class = 'col-12 col-md-4'>
                                 <button id='smart-reply3' class = 'btn btn-outline-primary btn-block mb-2'>Marked as VOC.</button>
                             </div>
-                        </div>
+                        </div> -->
                         <hr>
                         <button type="submit" id='submit-close' class="btn bmh-blue-bg btn-block">Submit</button>
                     </div>                     
